Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103368

QDoc doesn't save the return type of QML methods in the index files

XMLWordPrintable

    • f0f9c1d99a (qt/qttools/dev) f0f9c1d99a (qt/tqtc-qttools/dev) ceddeb22b6 (qt/qttools/6.3) ceddeb22b6 (qt/tqtc-qttools/6.3) f07a5a74ad (qt/tqtc-qttools/6.2) ceddeb22b6 (qt/qttools/6.3.1) ceddeb22b6 (qt/tqtc-qttools/6.3.1) f0f9c1d99a (qt/qttools/6.4)
    • DaVinci 55

      When QDoc generates the documentation for a project, it parses a series of information from the code that it uses to generate the final output.

      Those information are saved, as part of the process, into index files, which are later used by documentation projects that depend on other projects to retrieve data about linking information and the general shape of the code for that module.

      The entries for a QMLMethod in the index files do not contain the return type of the method.
      This information is available to QDoc when generating the documentation for the project itself but seems to never be saved in the index files themselves, making it unavalaible to dependent projects.

      To preserve enough information to allow dependent projects to build a clear picture of the QMLMethods in a project and to be able to provide information about them, the return type should be saved in the index files.

        For Gerrit Dashboard: QTBUG-103368
        # Subject Branch Project Status CR V

            diseraluca Luca Di Sera
            diseraluca Luca Di Sera
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes